<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/edit_plan_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/plan_name_hint"/>
    
    <Button 
        android:id="@+id/delete_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_delete_btn_label"/>
    
    <Button 
        android:id="@+id/save_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_label"/>
    
    <Button 
        android:id="@+id/cont_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cont_btn_label"/>

</LinearLayout>